objects/Candidate__c.object
<CustomObject>
    <fields>
        <fullName>CandidateID__c</fullName>
        <displayFormat>C{000}</displayFormat>
        <label>CandidateID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Candidates</relationshipLabel>
        <relationshipName>Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CourseOpted__c</fullName>
        <label>Courses Opted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Devops</fullName>
                </value>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>DotNet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FName__c</fullName>
        <label>FName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fees__c</fullName>
        <label>Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LName__c</fullName>
        <label>LName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gachibowli</fullName>
                </value>
                <value>
                    <fullName>Kondapur</fullName>
                </value>
                <value>
                    <fullName>Madhapur</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>